--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 Flask==1.0.2
 Flask-Cors==3.0.7
 gunicorn==19.9.0
@@ -17,5 +16,4 @@ numpydoc==0.8.0
 Pillow==5.2.0
 py==1.6.0
 itsdangerous==0.24
-
-
+tensorflow==1.12.0
